--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr class="cash">
+                <tr class="fullCash">
                     <td>Выручка, руб.</td>
                     <td class="blue">500 521</td>
                     <td class="green">480 521</td>
